add activity status and priority control
